--- a/vignettes/demo.Rmd
+++ b/vignettes/demo.Rmd
@@ -13,22 +13,21 @@ Here we parse the file:
 
 ```{r}
 library(goodpracticeeighteen)
-# function with examples filename
-fwef <- find_path("has_examples_in_rd.Rd")
-testit::assert(file.exists(fwef))
-doc <- tools::parse_Rd(fwef)
-testit::assert(class(doc) == "Rd")
 ```
 
-We can see if there is a tag callde `examples`:
+One file:
 
 ```{r}
-tags <- tools:::RdTags(doc)
-print("\\examples" %in% tags)
+filename <- find_path("f_with_examples.Rd")
+testit::assert(has_examples_in_rd(filename))
+filename <- find_path("f_without_examples.Rd")
+testit::assert(!has_examples_in_rd(filename))
 ```
 
-And we can extract the length of the `examples` section:
+Multiple files:
 
 ```{r}
-print(length(doc[[which(tags == "\\examples")]]))
+filenames <- find_paths(c("f_with_examples.Rd", "f_without_examples.Rd"))
+testit::assert(has_examples_in_rds(filenames) == c(TRUE, FALSE))
 ```
+
